# Aksara-Legal-AI

./: LICENSE  README.md  docker-compose.yml
ai-service/: .env.example  .gitignore  Dockerfile  Makefile  PROMPTS.md  README.md  aksara_fallback.db  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
ai-service/.github/workflows/: ci.yml
ai-service/aksara_legal_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-service/alembic/: env.py
ai-service/alembic/versions/: 20240928_01_initial.py  20241005_02_html_templates.py
ai-service/app/: main.py
ai-service/app/api/: deps.py  router.py
ai-service/app/api/v1/: __init__.py  autopilot.py  health.py  ingest.py  qa.py  templates.py  workspace.py
ai-service/app/core/: config.py  errors.py  logging.py  prompts.py
ai-service/app/db/: migrations.py  session.py
ai-service/app/models/: __init__.py  base.py  entities.py
ai-service/app/schemas/: autopilot.py  common.py  health.py  ingest.py  qa.py  templates.py  workspace.py
ai-service/app/services/autopilot/: mapping.py  service.py
ai-service/app/services/autopilot/renderer/: service.py
ai-service/app/services/autopilot/resolver/: service.py
ai-service/app/services/autopilot/templates/: fallback.py  service.py
ai-service/app/services/autopilot/validators/: fields.py
ai-service/app/services/llm/: gemini.py
ai-service/app/services/rag/ingestion/: chunker.py  html.py  pdf.py  service.py
ai-service/app/services/rag/pipeline/: service.py
ai-service/app/services/rag/retrieval/: service.py
ai-service/app/services/storage/: client.py
ai-service/app/services/workspace/: analyzer.py
ai-service/app/utils/: auth.py  ids.py  rate_limiter.py
ai-service/scripts/: run-docker.sh
ai-service/tests/golden/: test_qa_snapshots.py
ai-service/tests/unit/api/: test_must_cite.py
ai-service/tests/unit/autopilot/: test_renderer.py  test_template_service.py  test_validator.py
ai-service/tests/unit/llm/: test_gemini.py
ai-service/tests/unit/rag/: test_chunker.py
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  nest-cli.json  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  (+1 more)
docs/: product-requirements-document.md  sitemap.md
frontend/: .dockerignore  Dockerfile  README.md  design_document.json  design_system.json  docker-compose.yml  landing_page_tasks.md  package-lock.json  package.json
(+169 files in other folders)
